--- a/css/common.css
+++ b/css/common.css
@@ -1,24 +1,66 @@
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-  margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
-  color: #212121;
-  line-height: 1.5;
+	margin: 16px;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	background-color: #fafafa;
+	color: #212121;
+	line-height: 1.5;
 }
 
 input {
-  padding: 8px;
-  font: inherit;
+	padding: 8px;
+	font: inherit;
 }
 
 button {
-  padding: 8px 12px;
-  cursor: pointer;
+	padding: 8px 12px;
+	cursor: pointer;
+}
+
+/* 03-calc styles */
+.container {
+	width: 300px;
+	background-color: grey;
+	margin: auto;
+	padding: 30px;
+}
+
+.title {
+	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+input {
+	display: block;
+	width: 100%;
+	border-radius: 3px;
+	border: 1px solid black;
+	padding: 5px;
+	margin-top: 10px;
+}
+#price {
+	margin-bottom: 10px;
+}
+
+.text-right {
+	text-align: right;
+	font-size: 30px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: 700;
+	margin-bottom: 0;
+}
+
+.amount {
+	background-color: blue;
+	display: inline-block;
+	padding: 1px 5px;
+	margin: 0 5px;
+	border-radius: 3px;
+	color: #fff;
 }
